<resources>
    <string name="app_name">KeepNote</string>

    <string name="error_message">Something went wrong</string>

    <string name="sort">Sort</string>
    <string name="grid_view">Grid view</string>
    <string name="list_view">List view</string>
    <string name="note">Note</string>
    <string name="folder">Folder</string>
    <string name="create_element">Create element</string>
    <string name="create_folder">Create folder</string>
    <string name="create_note">Create note</string>
    <string name="update_note">Update note</string>
    <string name="update_folder">Update folder</string>
    <string name="edit_element">Edit element</string>
    <string name="delete_element">Delete element</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="selected_color">Selected color</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="navigate_back">Navigate back</string>
    <string name="note_details">Note details</string>
    <string name="folder_details">Folder details</string>
    <string name="share_note">Share note</string>

    <string name="sort_by">Sort by</string>
    <string name="radio_name">name</string>
    <string name="radio_date">date</string>
    <string name="order">Order</string>
    <string name="radio_ascending">ascending</string>
...
